--- a/SCME.UI/PagesTech/ATUPage.xaml
+++ b/SCME.UI/PagesTech/ATUPage.xaml
@@ -80,19 +80,19 @@
                 <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.AtuPRSM}"  HorizontalAlignment="Left"/>
                 <Label Grid.Column="1" Grid.Row="5" Content="0" x:Name="lbAtuPRSM" FontSize="{StaticResource FontSize26}"  Height="Auto" HorizontalContentAlignment="Right" />
 
-                <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Column="0" Grid.Row="6"  HorizontalAlignment="Left"/>
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="6"   IsNumeric="True" Minimum="0" Maximum="100000" Text="{Binding ClampParameters.Height, ElementName=aTUPage}" />
+                <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Column="0" Grid.Row="6"  HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="6"   IsNumeric="True" Minimum="0" Maximum="100000" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}" Text="{Binding ClampParameters.Height, ElementName=aTUPage}" />
 
                 <Label Content="{x:Static res:Resources.Temp}"  Grid.Column="0"  Grid.Row="7"  HorizontalAlignment="Left"/>
                 <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="7"   IsNumeric="True" Minimum="0" Maximum="200" Text="{Binding Temperature, ElementName=aTUPage, UpdateSourceTrigger=PropertyChanged}" />
 
-                <Label Content="{x:Static res:Resources.Force}"  Grid.Column="0"  Grid.Row="8"  HorizontalAlignment="Left"/>
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="8"    IsNumeric="True"   Maximum="200" Minimum="0" Text="{Binding ClampParameters.CustomForce, ElementName=aTUPage}" />
+                <Label Content="{x:Static res:Resources.Force}"  Grid.Column="0"  Grid.Row="8"  HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="8"    IsNumeric="True"   Maximum="200" Minimum="0" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}" Text="{Binding ClampParameters.CustomForce, ElementName=aTUPage}" />
 
-                <Label Grid.Column="0" x:Name="lblTitleTop" Grid.Row="9" Content="{x:Static res:Resources.TopTempName}"  HorizontalAlignment="Left"/>
-                <Label Grid.Column="1" Grid.Row="9" Content="0" x:Name="TopTempLabel"  Background="LightGreen"  HorizontalContentAlignment="Right" />
+                <Label Grid.Column="0" x:Name="lblTitleTop" Grid.Row="9" Content="{Binding Source={StaticResource TopTempName}}"  HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
+                <Label Grid.Column="1" Grid.Row="9" Content="0" x:Name="TopTempLabel"  Background="LightGreen"  HorizontalContentAlignment="Right" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
 
-                <Label Grid.Column="0" x:Name="lblTitleBot" Grid.Row="10" Content="{x:Static res:Resources.BotTempName}"  HorizontalAlignment="Left"/>
+                <Label Grid.Column="0" x:Name="lblTitleBot" Grid.Row="10" Content="{Binding Source={StaticResource BottomTempName}}"  HorizontalAlignment="Left"/>
                 <Label Grid.Column="1" Grid.Row="10" Content="0" x:Name="BotTempLabel"  Background="LightGreen" HorizontalContentAlignment="Right"  />
             </Grid>
         </Border>
